// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style" 2`] = `
"active undefined
"
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret.json 1`] = `
{
  "_id": "esv-test-secret",
  "description": "Test Secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-2.json 1`] = `
{
  "_id": "esv-test-secret-2",
  "description": "Test Secret Two",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_2_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-3.json 1`] = `
{
  "_id": "esv-test-secret-3",
  "description": "Test Secret Three",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_3_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-4.json 1`] = `
{
  "_id": "esv-test-secret-4",
  "description": "Testing secret using versioning",
  "encoding": "generic",
  "useInPlaceholders": false,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_3}",
      "version": "3",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_2}",
      "version": "2",
    },
    {
      "status": "DISABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style" 2`] = `
"active undefined
"
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret.json 1`] = `
{
  "_id": "esv-test-secret",
  "description": "Test Secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-2.json 1`] = `
{
  "_id": "esv-test-secret-2",
  "description": "Test Secret Two",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_2_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-3.json 1`] = `
{
  "_id": "esv-test-secret-3",
  "description": "Test Secret Three",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_3_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-4.json 1`] = `
{
  "_id": "esv-test-secret-4",
  "description": "Testing secret using versioning",
  "encoding": "generic",
  "useInPlaceholders": false,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_3}",
      "version": "3",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_2}",
      "version": "2",
    },
    {
      "status": "DISABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_1}",
      "version": "1",
    },
  ],
}
`;
